# hands-on-ai-hw3

./: .dockerignore  .gitignore  Dockerfile  README.md  ablation_gptq.py  bonus_2bit_hqq.py  collaboration_report.md  cpu_benchmark.py  pyproject.toml  report.md  requirements.lock.txt  requirements.txt  run_all.py  setup_vast.sh  task1_benchmark.py  task2_gptq.py  task3_calibration.py
src/: common.py
src/hands_on_ai_hw3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
